<resources>
    <string name="app_name">OpaynHrms</string>
    <string name="nointernet">Internet is not avaliable</string>
    <string name="unauthrised">Session expired Please Login to continue</string>
    <string name="ok">Okay</string>
    <string name="login">Login</string>
    <string name="name">Name</string>

    <string name="create_password">New Password</string>
    <string name="re_enter_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_account">Don\'t have account</string>
    <string name="create_account">Create Account</string>
    <string name="request_for_approval">Don\'t have login Details</string>
    <string name="request">Contact Admin</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_6_digit_code_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with <font color='#F6265F'>4-digit code </font>to reset your password.</string>
    <string name="please_enter_the_6_digit_code_receive_by_email">Please enter the <font color='#F6265F'>4-digit code </font> receive by Email.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="submit">Submit</string>
    <string name="enter_your_code">Enter your Code</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="create_new_password">Create New Password</string>

    <string name="reconnect">Reconnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="off_emergency">Off Emergency</string>
    <string name="logout">Logout</string>
    <string name="arif_shaikh_joined_your_team_welcome_him">Arif Shaikh joined your team welcome him</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_emp_id">Enter Emp-id</string>
    <string name="change_password">Change Password</string>
    <string name="make_request">Make Request</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="half_day">Half Day</string>
    <string name="longdes">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source</string>
    <string name="reason">Reason</string>
    <string name="submit_request">Submit Request</string>
    <string name="fullday">Full Day</string>
    <string name="old_password">Old Password</string>
    <string name="supervisor">Supervisor</string>
    <string name="start_date">Start Date</string>
    <string name="start_tim">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="leave_type">Leave Type</string>
    <string name="basic_salary">Basic Salary</string>
    <string name="attendance_pay">Attendance pay</string>
    <string name="sick_leave_pay">Sick leave pay</string>
    <string name="maternity_leave_pay">Maternity leave pay</string>
    <string name="net_salary">Net Salary</string>
    <string name="gross_salary">Gross Salary</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="absent">Absent</string>
    <string name="checkIn">CheckIn</string>
    <string name="checkout">Check Out</string>
    <string name="basic_information">Basic information</string>
    <string name="designation">Designation</string>
    <string name="department">Department</string>
    <string name="station">Station</string>
    <string name="company">Company</string>
    <string name="title">Title</string>
    <string name="first_half">First Half</string>
    <string name="second_half">Second Half</string>
    <string name="mobile">Mobile</string>
    <string name="contact_admin">Contact Admin</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="add_user">Add User</string>
    <string name="select_role">Select Role</string>


    <string name="v_email">Please enter email</string>
    <string name="v_validemail">Please enter valid email</string>
    <string name="v_password">Please enter password</string>
    <string name="opayn_hrms">Opayn HRMS</string>
    <string name="opayn_llc">Opayn LLC</string>
    <string name="v_otp">Please enter otp</string>
    <string name="v_otp_length">Otp length must be four characters</string>
    <string name="otpverified_sucess">Otp Verified Successfully</string>
    <string name="v_entername">Please enter name</string>
    <string name="v_phonenumber">Please enter phone number</string>
    <string name="v_subject">Please enter subject</string>
    <string name="v_desc">Please enter description</string>
    <string name="v_enwconfirmpassword">Please enter confirm password</string>
    <string name="v_newpassword">Please enter new password</string>
    <string name="v_currentpassword">Please enter current password</string>
    <string name="v_role">Please select role</string>
    <string name="passwordlength">Password must contain atleast 6 characters</string>
    <string name="passwormatcherror">Password does not match</string>
    <string name="manualpermission">You need to allow necessary permissions in Settings manually</string>
    <string name="permisionmsgfirst">Core fundamental are based on these permissions</string>
    <string name="permissiondenied">Permission denied</string>
    <string name="profileupdate">Profile has been updated successfully</string>
    <string name="approved">Approved</string>
    <string name="approve">Approve</string>
    <string name="emergencyleave">Emergency Leave</string>
    <string name="support_nteam">Support\nTeam</string>
    <string name="contact_us">Contact Us</string>
    <string name="attandancelist">Attendance List</string>
    <string name="distancerange">Attendance can me marked between 100 meters of distance</string>
    <string name="leave">Leave</string>
    <string name="leaves">Leaves:</string>
    <string name="calendar">Calendar</string>
    <string name="employees">Employees</string>
    <string name="addholiday">Add Holiday</string>
    <string name="emp_reporting">Empolyee Reporting</string>
    <string name="reporting">Reporting</string>
    <string name="salary">Salary</string>
    <string name="requestleave">Request Leave</string>
    <string name="announcement">Announcement</string>
    <string name="payslip">PaySlip</string>
    <string name="home">Home</string>
    <string name="announcementbottom">Announcementbottom</string>
    <string name="add_announcement">Add Announcement</string>
    <string name="attandance">Attendance</string>
    <string name="enter_the_message">Enter the message</string>
    <string name="filter">Filter</string>
    <string name="custom">Custom</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="hello">Hello</string>
    <string name="singleday">Single Day</string>
    <string name="multipleday">Multiple Day</string>
    <string name="shortleave">Short Leave</string>
    <string name="announcement_msg">Enter Announcement message</string>
    <string name="titlefield">Title Field is empty</string>
    <string name="notification">Notification</string>
    <string name="leavemanagment">Leave Management</string>
    <string name="pending">Pending</string>
    <string name="accept">Accpet</string>
    <string name="reject">Reject</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="leavemanagement">LeaveManagement</string>
    <string name="edituser">Edit User</string>
    <string name="update">Update</string>
    <string name="leave_details">Leave Details</string>
    <string name="leavedetails">Leave Details</string>
    <string name="workhistory">Work History</string>
    <string name="work_history">Work History</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="holidaylisting">Holiday Listing</string>
    <string name="leave_reporting">Leave Reporting</string>
    <string name="attendance_reporting">Attendance Reporting</string>
    <string name="work_report">Work Report</string>
    <string name="support_tickets">Support Tickets</string>
    <string name="salary_report">Salary Report</string>
    <string name="clockify">Clockify</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="yearly">Yearly</string>
    <string name="select_leave_category">Select Leave Category</string>
    <string name="count">Count</string>


    //leave types
    <string name="casual_Leave">Casual Leave (CL)</string>
    <string name="sick_leave">Sick Leave (SL)</string>
    <string name="maternity_leave">Maternity Leave (ML)</string>
    <string name="marriage_leave">Marriage Leave.</string>
    <string name="paternity_leave">Paternity Leave.</string>
    <string name="bereavement_leave">Bereavement Leave.</string>
    <string name="privilege_earned_annual_leave">Privilege Leave (PL) / Earned Leave (EL) / Annual Leave (AL)</string>
    <string name="profile">Profile</string>
    <string name="faq">FAQ</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="location_is_needed">Location is needed</string>
    <string name="user_added_successfully">User added successfully</string>
    <string name="user_updated_successfully">User update successfully</string>
    <string name="search">Search</string>
    <string name="ticket_listing">Ticket Listing</string>
    <string name="note_if_you_want_to_reject_leave_please_give_reason">NOTE: If You want to Reject Leave, Please give Reason</string>
    <string name="apply_date">Apply Date:</string>
    <string name="no_reason">No Reason</string>
    <string name="title_error">Please Enter the Title</string>
    <string name="description_error">Please Enter the Description</string>


</resources>