<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.opaynhrms.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".auth.Login">

        <include layout="@layout/bg_layout" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login"
            style="@style/semiboldfont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@+id/cvContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/view"
                    style="@style/boldfont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:text="Opayn HRMS"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_wrap"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    app:layout_constraintTop_toBottomOf="@+id/view">
                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvName"
                        style="@style/edittextlogintitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_wrap"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_mail"
                    app:layout_constraintTop_toBottomOf="@+id/name_wrap">
                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvEmail"
                        style="@style/edittextlogintitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passowrd_wrap"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_password"
                    app:layout_constraintTop_toBottomOf="@+id/email_wrap">
                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvPassword"
                        style="@style/edittextlogintitle" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/reEnterPasswordWrap"
                    style="@style/edittextlogintitleparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"

                    app:layout_constraintTop_toBottomOf="@+id/passowrd_wrap">
                    <!--this is the actual edit text which takes the input-->
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvReEnterPassword"
                        style="@style/edittextlogintitle" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/customSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:thumb="@drawable/ic_baseline_female_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reEnterPasswordWrap"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/button_style2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/pinky_red"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@+id/customSwitch" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgotpassword"
                    style="@style/semiboldfont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/pinky_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/cvContainer">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createaccounthint"
                style="@style/regularfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_for_approval"
                android:textSize="@dimen/_10sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/createaccount"
                style="@style/semiboldfont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/request"
                android:textColor="@color/pinky_red"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/createaccounthint"
                app:layout_constraintTop_toBottomOf="@+id/cvContainer" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>