<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dailog.FilterDailog">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_5sdp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgetlabel"
                    style="@style/semiboldfont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:gravity="center"
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/filter"
                    android:textColor="@color/light_gre1"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/btnweekly"
                        style="@style/mediumfont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weekly"
                        android:textColor="@color/black_3"
                        android:textSize="@dimen/_12sdp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/light_gre1"/>

                    <RadioButton
                        android:id="@+id/btnmonthly"
                        style="@style/mediumfont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monthly"
                        android:textColor="@color/black_3"
                        android:textSize="@dimen/_12sdp" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/light_gre1"/>


                    <RadioButton
                        android:id="@+id/btncustom"
                        style="@style/mediumfont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/custom"
                        android:textColor="@color/black_3"
                        android:textSize="@dimen/_12sdp" />
                </RadioGroup>


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/datecontainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvLeaveTitle">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/startdatewrap"
                        style="@style/edittextlogintitleparent"
                        android:layout_width="0dp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                       android:layout_marginStart="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:hint="@string/start_date"
                        app:endIconDrawable="@drawable/ic_calendar_line_small"
                        app:endIconMode="custom"
                        app:hintTextAppearance="@style/TextLabel">

                        <!-- Inside text input layout add
                              an auto complete text view
                                and make its input type to none-->
                        <AutoCompleteTextView
                            android:id="@+id/startdate"
                            style="@style/edittextlogintitle"
                            android:inputType="date"
                            android:text="20/05/1996"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_10sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/endwrap"
                        style="@style/edittextlogintitleparent"
                        android:layout_width="0dp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginStart="@dimen/_1sdp"
                        android:layout_weight="1"
                        android:hint="@string/end_date"
                        app:endIconDrawable="@drawable/ic_calendar_line_small"
                        app:endIconMode="custom"
                        app:hintTextAppearance="@style/TextLabel">

                        <!-- Inside text input layout add
                              an auto complete text view
                                and make its input type to none-->
                        <AutoCompleteTextView
                            android:id="@+id/enddate"
                            style="@style/edittextlogintitle"
                            android:inputType="date"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_8sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginbtn"
                    style="@style/button_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:backgroundTint="@color/pinky_red"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/submit" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>